crates/pcb/tests/snapshots/path__path_local_mixed_release.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.hash_globs([\"*.kicad_mod\"]).ignore_globs([\"layout/*\"]).snapshot_run(\"pcb\",\n[\"release\", \"--board\", \"LocalPathTest\", \"--source-only\", \"-f\", \"json\",],)"
---
Command: pcb release --board LocalPathTest --source-only -f json
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Existing file: <TEMP_DIR>/boards/existing.toml
Nonexistent file: <TEMP_DIR>/boards/missing.toml
Existing directory: <TEMP_DIR>/config
Nonexistent directory: <TEMP_DIR>/boards/missing_dir
✓ Release information gathered
✓ Copying source files and dependencies
Existing file: <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/existing.toml
Nonexistent file: <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/missing.toml
Existing directory: <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/config
Nonexistent directory: <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/missing_dir
Error: Path 'build/LocalPathTest' does not exist
   ╭─[ <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:3:29 ]
   │
 3 │ add_property("layout_path", Path("build/LocalPathTest", allow_not_exist=True))
   │                             ────────────────────────┬────────────────────────  
   │                                                     ╰────────────────────────── Path 'build/LocalPathTest' does not exist
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:3:29 (Path 'build/LocalPathTest' does not exist)

Error: Path 'missing.toml' does not exist
   ╭─[ <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:6:20 ]
   │
 6 │ nonexistent_file = Path("missing.toml", allow_not_exist=True)
   │                    ─────────────────────┬────────────────────  
   │                                         ╰────────────────────── Path 'missing.toml' does not exist
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:6:20 (Path 'missing.toml' does not exist)

Error: Path 'missing_dir' does not exist
   ╭─[ <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:8:19 ]
   │
 8 │ nonexistent_dir = Path("missing_dir", allow_not_exist=True)
   │                   ────────────────────┬────────────────────  
   │                                       ╰────────────────────── Path 'missing_dir' does not exist
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen:8:19 (Path 'missing_dir' does not exist)

✗ Validating build from staged sources failed
Error: Validating build from staged sources failed

Caused by:
    Build validation failed for staged zen file: <TEMP_DIR>/.pcb/releases/LocalPathTest-unknown/src/boards/LocalPathTest.zen
